# api-monitoring-setup

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  api_monitoring.postman_collection.json  dashboard_grafana.json  dashboard_grafana_antonputra_lesson232.json  db.py  docker-compose.yaml  main.py  metrics.py  metrics_route.py  prometheus.yaml  prometheus_labels.py  pyproject.toml  repository.py  requirements.txt  schema.sql
app/: db.py  decorators.py  logger.py  main.py  metrics.py  metrics_route.py  repository.py
configs/: prometheus.yaml
dashboards/: dashboard.json  dashboard_got_it.json  dashboard_grafana_antonputra_lesson232.json
jmeter_benchmark/: test_group.jmx
notes/: loki.md  metrics.md  pg_stats_statements.md
