[project]
name = "lessons-239"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "fastapi==0.115.6",
    "prometheus_client==0.21.1",
    "psutil>=7.0.0",
    "python-logging-loki>=0.3.1",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "orjson==3.10.13",
    "gunicorn==23.0.0",
    "asyncpg==0.30.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = ["ruff>=0.9.9"]
